# adementary-theme

./: .gitignore  .travis.yml  gtk.css  install.sh  meson.build  parse-sass.sh  readme.md  render-assets.sh
Tetra/: meson.build
Tetra-dark/: index.theme  meson.build
Tetra-dark/gtk-2.0/: apps.rc  main.rc  meson.build  render-assets-external.sh  render-assets.sh
Tetra-dark/gtk-3.0/: _applications.scss  _budgie.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  assets  gtk-dark.scss  meson.build
Tetra-dark/plank/: meson.build
Tetra-dark/xfwm4/: meson.build  render-assets.sh
Tetra/gnome-shell/: _common.scss  meson.build
Tetra/gtk-2.0/: gtkrc  main.rc  meson.build  render-assets-external.sh  render-assets.sh
Tetra/gtk-3.0/: _applications.scss  _budgie.scss  _colors.scss  gtk-dark.scss  gtk.scss  meson.build
Tetra/plank/: dock.theme  meson.build
Tetra/xfwm4/: assets.txt  meson.build
extras/: README.md
extras/Adementary-budgie-dock/: dark.css  light.css
src/: index-dark.theme  index-darker.theme  index-light.theme  index.theme
src/cinnamon/: cinnamon-dark.css  cinnamon-dark.scss  cinnamon-darker.css  cinnamon-darker.scss  cinnamon-light.css  cinnamon-light.scss  cinnamon.css  cinnamon.scss
src/cinnamon/sass/: _colors.scss  _common.scss  _drawing.scss
src/gnome-shell/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.22/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.24/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.26/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.28/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.30/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.32/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.34/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.36/: gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/sass/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss
src/gtk-2.0/: apps.rc  assets-dark.txt  gtkrc  gtkrc-dark  gtkrc-light  main.rc  render-assets-dark.sh  render-assets-external-dark.sh  render-assets-external.sh  render-assets.sh
src/gtk-3.0/: _applications.scss  _budgie.scss  _colors.scss  _common.scss  _drawing.scss  _misc.scss  assets.txt  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss
src/gtk-3.0/3.22/: _applications.scss  _budgie.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _gnome-3.20.scss  _palette.scss  gtk-dark.css  gtk-dark.scss  gtk-darker.css  gtk-darker.scss  gtk-light.css  gtk-light.scss  gtk.css  gtk.scss
src/gtk-3.0/3.24/: _applications.scss  _budgie.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _gnome-3.30.scss  _palette.scss  gtk-dark.css  gtk-dark.scss  gtk-darker.scss  gtk-light.css  gtk-light.scss  gtk.css  gtk.scss
src/gtk-3.0/gtk-common/: assets.txt
src/gtk-3.0/sass/: _applications.scss  _budgie.scss  _colors-public.scss  _colors.scss  _common.scss  _darker-widgets.scss  _drawing.scss  _gnome-applications.scss  _palette.scss
src/metacity-1/: metacity-theme-3.xml
src/plank/: dock-dark.theme  dock-darker.theme  dock-light.theme  dock.theme
src/xfce-notify-4.0/: gtk-dark.css  gtk.css
src/xfwm4/: assets.txt  themerc  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
src/xfwm4-dark/: assets.txt  clean-assets.sh  meson.build  render-assets.sh  themerc  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
