xfwm4_dir = join_paths(theme_dir_dark, 'xfwm4')

# static files to copy
data_sources = [
  'bottom-active.png',
  'bottom-inactive.png',
  'bottom-left-active.png',
  'bottom-left-inactive.png',
  'bottom-right-active.png',
  'bottom-right-inactive.png',
  'close-active.png',
  'close-inactive.png',
  'close-prelight.png',
  'close-pressed.png',
  'hide-active.png',
  'hide-inactive.png',
  'hide-prelight.png',
  'hide-pressed.png',
  'left-active.png',
  'left-inactive.png',
  'maximize-active.png',
  'maximize-inactive.png',
  'maximize-prelight.png',
  'maximize-pressed.png',
  'menu-active.png',
  'menu-inactive.png',
  'menu-prelight.png',
  'menu-pressed.png',
  'right-active.png',
  'right-inactive.png',
  'shade-active.png',
  'shade-inactive.png',
  'shade-prelight.png',
  'shade-pressed.png',
  'shade-toggled-active.png',
  'shade-toggled-inactive.png',
  'shade-toggled-prelight.png',
  'shade-toggled-pressed.png',
  'stick-active.png',
  'stick-inactive.png',
  'stick-prelight.png',
  'stick-pressed.png',
  'stick-toggled-active.png',
  'stick-toggled-inactive.png',
  'stick-toggled-prelight.png',
  'stick-toggled-pressed.png',
  'themerc',
  'title-1-active.png',
  'title-1-inactive.png',
  'title-2-active.png',
  'title-2-inactive.png',
  'title-3-active.png',
  'title-3-inactive.png',
  'title-4-active.png',
  'title-4-inactive.png',
  'title-5-active.png',
  'title-5-inactive.png',
  'top-left-active.xpm',
  'top-left-inactive.xpm',
  'top-right-active.xpm',
  'top-right-inactive.xpm',
]

# destination directory
install_dir = xfwm4_dir

# install static data files
install_data(data_sources, install_dir: install_dir)
